# aws-serverless-data-lake-framework

./: .cfn-nag-deny-list.yml  .cfnlintrc  .flake8  .gitignore  .mkdocs.yml  .readthedocs.yml  CONTRIBUTING.md  README.md  deploy-azure.sh  deploy.sh  pyproject.toml  validate.sh
azure-setup/: README.md  azure-pipelines-team-template.yml  parameters.json
cfn-cicd/: build-cfn-module.sh  sam-translate.py  template.yaml
docs/: architecture.md  constructs.md  index.md  requirements.txt
sdlf-cicd/: cfn-deploy-bootstrap.sh  deploy-generic-crossaccount.sh  deploy-generic.sh  manifest-sdlf-base.yaml  manifest-sdlf-stages.yaml  manifest-sdlf.yaml  tags.json  template-cfn-module.yaml  template-cicd-cfn-modules-pipelines.yaml  template-cicd-cfn-modules.yaml  template-cicd-child-foundations.yaml  template-cicd-domain-parameters.yaml  template-cicd-domain-roles.yaml  template-cicd-domain-team-role.yaml  template-cicd-domain.yaml  template-cicd-generic-crossaccount.yaml  template-cicd-generic-git.yaml  template-cicd-prerequisites.yaml  template-cicd-sdlf-pipelines.yaml  template-cicd-sdlf-repositories.github.yaml  template-cicd-sdlf-repositories.gitlab.yaml  template-cicd-sdlf-repositories.yaml  template-cicd-shared-foundations.yaml  template-cicd-stage.yaml  template-cicd-team-pipeline.yaml  template-cicd-team.yaml  (+9 more)
sdlf-pipeline/: .gitignore  deploy.sh  deployspec.yaml  parameters-dev.json  parameters-prod.json  parameters-test.json  pyproject.toml  template.py  template.yaml
sdlf-pipeline/nested-stacks/: template-stage-interface.yaml  template-statemachine.yaml
sdlf-pipeline/src/: pipeline.py  pipeline.yaml  template.yaml
sdlf-stage-emrserverless/: deployspec.yaml  pyproject.toml  template.py  template.yaml
sdlf-stage-emrserverless/lambda/routing/src/: lambda_function.py
sdlf-stage-emrserverless/src/: emrserverless.py  template.yaml
sdlf-stage-emrserverless/src/state-machine/: stage-emrserverless.asl.json
sdlf-stage-emrserverless/state-machine/: stage-emrserverless.asl.json
sdlf-stage-lambda/: deployspec.yaml  pyproject.toml  template.py  template.yaml
sdlf-stage-lambda/lambda/redrive/src/: lambda_function.py
sdlf-stage-lambda/lambda/routing/src/: lambda_function.py
sdlf-stage-lambda/src/: app.py  awslambda.py  awslambda.yaml  template.yaml
sdlf-stage-lambda/src/lambda/error/src/: lambda_function.py
sdlf-stage-lambda/src/lambda/postupdate-metadata/src/: lambda_function.py
sdlf-stage-lambda/src/lambda/process-object/src/: lambda_function.py
sdlf-stage-lambda/src/lambda/redrive/src/: lambda_function.py
sdlf-stage-lambda/src/lambda/routing/src/: lambda_function.py
sdlf-stage-lambda/src/state-machine/: stage-lambda.asl.json
sdlf-stage-lambda/state-machine/: stage-lambda.asl.json
sdlf-team/: README.md  deploy.sh  deployspec.yaml  modulestack.yaml  parameters-dev.json  parameters-prod.json  parameters-test.json  pyproject.toml  requirements.txt  template.py  template.yaml
sdlf-team/lambda/datasets-dynamodb/src/: lambda_function.py
sdlf-team/lambda/pipelines-dynamodb/src/: lambda_function.py
sdlf-team/nested-stacks/: template-cicd.yaml  template-iam.yaml  template-kms.yaml
sdlf-team/scripts/: bootstrap_team.sh  team_check.sh  template-team-repos.yaml
sdlf-team/src/: team.py  team.yaml  template.yaml
sdlf-team/src/lambda/datasets-dynamodb/src/: lambda_function.py
sdlf-team/src/lambda/pipelines-dynamodb/src/: lambda_function.py
(+553 files in other folders)
