[tool.poetry]
name = "sdlf.pipeline"
version = "2.5.0-alpha.2"
description = "AWS Serverless Data Lake Framework"
authors = ["Amazon Web Services"]
license = "MIT-0"
readme = "README.md"
repository = "https://github.com/awslabs/aws-serverless-data-lake-framework/"
documentation = "https://sdlf.readthedocs.io/en/latest/"


packages = [
    { include = "**/*", from = "src", to = "sdlf" },
]

exclude = ["**/*.yaml"]

[tool.poetry.dependencies]
python = "^3.12"
aws-cdk-lib = "^2.151.0"
constructs = ">=10.0.0,<11.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
