[tool.poetry]
name = "sdlf.stage-emrserverless"
version = "2.7.0-alpha.0"
description = "AWS Serverless Data Lake Framework"
authors = ["Amazon Web Services"]
license = "MIT-0"
readme = "README.md"
repository = "https://github.com/awslabs/aws-serverless-data-lake-framework/"
documentation = "https://sdlf.readthedocs.io/en/latest/"

packages = [
    { include = "**/*", from = "src", to = "sdlf/stage" },
]

exclude = ["**/*.yaml"]

[tool.poetry.dependencies]
python = "^3.12"
aws-cdk-lib = "^2.159.1"
constructs = ">=10.0.0,<11.0.0"
sdlf-pipeline = "^2.7.0a0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
