[tool.poetry]
name = "sdlf.stage-lambda"
version = "2.7.0-alpha.1"
description = "AWS Serverless Data Lake Framework"
authors = ["Amazon Web Services"]
license = "MIT-0"
readme = "README.md"
repository = "https://github.com/awslabs/aws-serverless-data-lake-framework/"
documentation = "https://sdlf.readthedocs.io/en/latest/"

packages = [
    { include = "**/*", from = "src", to = "sdlf/stage" },
]

exclude = ["**/*.yaml"]

[tool.poetry.dependencies]
python = "^3.11"
aws-cdk-lib = "^2.159.1"
constructs = ">=10.0.0,<11.0.0"
#sdlf-pipeline = "^2.7.0a1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
